ghc-4335c07/testsuite/tests/partial-sigs/should_compile/HigherRank1.hs
{-# LANGUAGE PartialTypeSignatures, RankNTypes #-}
module HigherRank1 where

foo :: (forall a. [a] -> [a]) -> _
foo x = (x [True, False], x ['a', 'b'])
