ghc-4335c07/testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardTwice.hs
{-# LANGUAGE PartialTypeSignatures #-}
module ExtraConstraintsWildcardTwice where

foo :: ((_), _) => a -> a
foo = undefined
